Fixed infograficos page on mobile

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -291,6 +291,7 @@ article.infograficos
   .info,
   figure
     +span-columns(6)
+    margin-right: 0
 
   .info
     p
