--- a/source/stylesheets/partials/_wordpress.sass
+++ b/source/stylesheets/partials/_wordpress.sass
@@ -10,7 +10,7 @@ div.aligncenter
   margin: 5px auto 5px auto
 
 .alignright
-  float: right
+  float: right !important
   margin: 5px 0 20px 20px
 
 .alignleft
